--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,7 +28,7 @@ repos:
       - id: ruff-format-docs
         name: ruff-format-docs
         language: python
-        entry: python scripts/ruff_format_docs.py
+        entry: python scripts/ruff_format_docs.py --line-length=88
         files: ^docs-website/.*\.mdx$
         types: [text]
         additional_dependencies:
