chore: make tests run on scripts + fix linting

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,6 +23,7 @@ on:
       - "test/**/*.py"
       - "pyproject.toml"
       - ".github/utils/*.py"
+      - "scripts/*.py"
 
 env:
   OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
