--- a/pydoc/utils_api.yml
+++ b/pydoc/utils_api.yml
@@ -1,6 +1,9 @@
 loaders:
   - type: haystack_pydoc_tools.loaders.CustomPythonLoader
     search_path: [../haystack/utils]
+    modules: ["asynchronous", "auth", "azure", "base_serialization", "callable_serialization", "deserialization",
+      "device", "filters", "http_client", "jinja2_chat_extension", "jinja2_extensions", "jupyter", "misc",
+      "requests_utils", "type_serialization", "url_validation"]
     ignore_when_discovered: ["__init__", "hf"]
 processors:
   - type: filter
