chore: remove unnecessary warm_up calls; mark EmbeddingBasedDocumentSplitter slow

--- a/.github/workflows/slow.yml
+++ b/.github/workflows/slow.yml
@@ -71,6 +71,7 @@ jobs:
               - "haystack/components/generators/chat/hugging_face_local.py"
               - "haystack/components/generators/hugging_face_api.py"
               - "haystack/components/generators/hugging_face_local_generator.py"
+              - "haystack/components/preprocessors/embedding_based_document_splitter.py"
               - "haystack/components/rankers/sentence_transformers_diversity.py"
               - "haystack/components/rankers/sentence_transformers_similarity.py"
               - "haystack/components/rankers/transformers_similarity.py"
@@ -92,6 +93,7 @@ jobs:
               - "test/components/generators/chat/test_hugging_face_local.py"
               - "test/components/generators/test_hugging_face_api.py"
               - "test/components/generators/test_hugging_face_local_generator.py"
+              - "test/components/preprocessors/test_embedding_based_document_splitter.py"
               - "test/components/rankers/test_sentence_transformers_diversity.py"
               - "test/components/rankers/test_sentence_transformers_similarity.py"
               - "test/components/rankers/test_transformers_similarity.py"
