--- a/.github/workflows/slow.yml
+++ b/.github/workflows/slow.yml
@@ -76,6 +76,7 @@ jobs:
               - "haystack/components/rankers/sentence_transformers_similarity.py"
               - "haystack/components/rankers/transformers_similarity.py"
               - "haystack/components/readers/extractive.py"
+              - "haystack/components/retrievers/multi_query_embedding_retriever.py"
               - "haystack/components/routers/transformers_text_router.py"
               - "haystack/components/routers/zero_shot_text_router.py"
 
@@ -98,6 +99,7 @@ jobs:
               - "test/components/rankers/test_sentence_transformers_similarity.py"
               - "test/components/rankers/test_transformers_similarity.py"
               - "test/components/readers/test_extractive.py"
+              - "test/components/retrievers/test_multi_query_embedding_retriever.py"
               - "test/components/routers/test_transformers_text_router.py"
               - "test/components/routers/test_zero_shot_text_router.py"
 
