--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,7 +47,9 @@ jobs:
           python-version: "${{ env.PYTHON_VERSION }}"
 
       - name: Install Hatch
-        run: pip install hatch==${{ env.HATCH_VERSION }}
+        uses: pypa/hatch@install
+        with:
+          version: "${{ env.HATCH_VERSION }}"
 
       - name: Ruff - check format and linting
         run: hatch run fmt-check
@@ -97,7 +99,9 @@ jobs:
           python-version: "${{ env.PYTHON_VERSION }}"
 
       - name: Install Hatch
-        run: pip install hatch==${{ env.HATCH_VERSION }}
+        uses: pypa/hatch@install
+        with:
+          version: "${{ env.HATCH_VERSION }}"
 
       - name: Check imports
         run: hatch run python .github/utils/check_imports.py
@@ -152,12 +156,15 @@ jobs:
         with:
           python-version: "${{ env.PYTHON_VERSION }}"
 
+
       - name: Install Hatch
-        id: hatch
+        uses: pypa/hatch@install
+        with:
+          version: "${{ env.HATCH_VERSION }}"
+      - name: Get Hatch environment
+        id: get-hatch-env
         shell: bash
-        run: |
-          pip install hatch==${{ env.HATCH_VERSION }}
-          echo "env=$(hatch env find test)" >> "$GITHUB_OUTPUT"
+        run: echo "env=$(hatch env find test)" >> "$GITHUB_OUTPUT"
 
       - name: Run
         run: hatch run test:unit
@@ -166,7 +173,7 @@ jobs:
         id: cache
         if: matrix.os == 'macos-latest'
         with:
-          path: ${{ steps.hatch.outputs.env }}
+          path: ${{ steps.get-hatch-env.outputs.env }}
           key: ${{ runner.os }}-${{ github.sha }}
 
       - name: Coveralls
@@ -237,11 +244,9 @@ jobs:
           python-version: "${{ env.PYTHON_VERSION }}"
 
       - name: Install Hatch
-        id: hatch
-        if: steps.files.outputs.any_changed == 'true'
-        run: |
-          pip install hatch==${{ env.HATCH_VERSION }}
-          echo "env=$(hatch env find test)" >> "$GITHUB_OUTPUT"
+        uses: pypa/hatch@install
+        with:
+          version: "${{ env.HATCH_VERSION }}"
 
       - name: Mypy
         if: steps.files.outputs.any_changed == 'true'
@@ -293,11 +298,9 @@ jobs:
           python-version: "${{ env.PYTHON_VERSION }}"
 
       - name: Install Hatch
-        id: hatch
-        shell: bash
-        run: |
-          pip install hatch==${{ env.HATCH_VERSION }}
-          echo "env=$(hatch env find test)" >> "$GITHUB_OUTPUT"
+        uses: pypa/hatch@install
+        with:
+          version: "${{ env.HATCH_VERSION }}"
 
 
       - name: Run
@@ -350,16 +353,18 @@ jobs:
           python-version: "${{ env.PYTHON_VERSION }}"
 
       - name: Install Hatch
-        id: hatch
+        uses: pypa/hatch@install
+        with:
+          version: "${{ env.HATCH_VERSION }}"
+      - name: Get Hatch environment
+        id: get-hatch-env
         shell: bash
-        run: |
-          pip install hatch==${{ env.HATCH_VERSION }}
-          echo "env=$(hatch env find test)" >> "$GITHUB_OUTPUT"
+        run: echo "env=$(hatch env find test)" >> "$GITHUB_OUTPUT"
 
       - uses: actions/cache/restore@v5
         id: cache
         with:
-          path: ${{ steps.hatch.outputs.env }}
+          path: ${{ steps.get-hatch-env.outputs.env }}
           key: ${{ runner.os }}-${{ github.sha }}
 
 
@@ -413,11 +418,13 @@ jobs:
           python-version: "${{ env.PYTHON_VERSION }}"
 
       - name: Install Hatch
-        id: hatch
+        uses: pypa/hatch@install
+        with:
+          version: "${{ env.HATCH_VERSION }}"
+      - name: Get Hatch environment
+        id: get-hatch-env
         shell: bash
-        run: |
-          pip install hatch==${{ env.HATCH_VERSION }}
-          echo "env=$(hatch env find test)" >> "$GITHUB_OUTPUT"
+        run: echo "env=$(hatch env find test)" >> "$GITHUB_OUTPUT"
 
       - name: Run
         run: hatch run test:integration-only-fast
