--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,9 +47,7 @@ jobs:
           python-version: "${{ env.PYTHON_VERSION }}"
 
       - name: Install Hatch
-        uses: pypa/hatch@install
-        with:
-          version: "${{ env.HATCH_VERSION }}"
+        run: pip install hatch==${{ env.HATCH_VERSION }}
 
       - name: Ruff - check format and linting
         run: hatch run fmt-check
@@ -99,9 +97,7 @@ jobs:
           python-version: "${{ env.PYTHON_VERSION }}"
 
       - name: Install Hatch
-        uses: pypa/hatch@install
-        with:
-          version: "${{ env.HATCH_VERSION }}"
+        run: pip install hatch==${{ env.HATCH_VERSION }}
 
       - name: Check imports
         run: hatch run python .github/utils/check_imports.py
@@ -156,15 +152,12 @@ jobs:
         with:
           python-version: "${{ env.PYTHON_VERSION }}"
 
-
       - name: Install Hatch
-        uses: pypa/hatch@install
-        with:
-          version: "${{ env.HATCH_VERSION }}"
-      - name: Get Hatch environment
-        id: get-hatch-env
+        id: hatch
         shell: bash
-        run: echo "env=$(hatch env find test)" >> "$GITHUB_OUTPUT"
+        run: |
+          pip install hatch==${{ env.HATCH_VERSION }}
+          echo "env=$(hatch env find test)" >> "$GITHUB_OUTPUT"
 
       - name: Run
         run: hatch run test:unit
@@ -173,7 +166,7 @@ jobs:
         id: cache
         if: matrix.os == 'macos-latest'
         with:
-          path: ${{ steps.get-hatch-env.outputs.env }}
+          path: ${{ steps.hatch.outputs.env }}
           key: ${{ runner.os }}-${{ github.sha }}
 
       - name: Coveralls
@@ -244,9 +237,11 @@ jobs:
           python-version: "${{ env.PYTHON_VERSION }}"
 
       - name: Install Hatch
-        uses: pypa/hatch@install
-        with:
-          version: "${{ env.HATCH_VERSION }}"
+        id: hatch
+        if: steps.files.outputs.any_changed == 'true'
+        run: |
+          pip install hatch==${{ env.HATCH_VERSION }}
+          echo "env=$(hatch env find test)" >> "$GITHUB_OUTPUT"
 
       - name: Mypy
         if: steps.files.outputs.any_changed == 'true'
@@ -298,9 +293,11 @@ jobs:
           python-version: "${{ env.PYTHON_VERSION }}"
 
       - name: Install Hatch
-        uses: pypa/hatch@install
-        with:
-          version: "${{ env.HATCH_VERSION }}"
+        id: hatch
+        shell: bash
+        run: |
+          pip install hatch==${{ env.HATCH_VERSION }}
+          echo "env=$(hatch env find test)" >> "$GITHUB_OUTPUT"
 
 
       - name: Run
@@ -353,18 +350,16 @@ jobs:
           python-version: "${{ env.PYTHON_VERSION }}"
 
       - name: Install Hatch
-        uses: pypa/hatch@install
-        with:
-          version: "${{ env.HATCH_VERSION }}"
-      - name: Get Hatch environment
-        id: get-hatch-env
+        id: hatch
         shell: bash
-        run: echo "env=$(hatch env find test)" >> "$GITHUB_OUTPUT"
+        run: |
+          pip install hatch==${{ env.HATCH_VERSION }}
+          echo "env=$(hatch env find test)" >> "$GITHUB_OUTPUT"
 
       - uses: actions/cache/restore@v5
         id: cache
         with:
-          path: ${{ steps.get-hatch-env.outputs.env }}
+          path: ${{ steps.hatch.outputs.env }}
           key: ${{ runner.os }}-${{ github.sha }}
 
 
@@ -418,13 +413,11 @@ jobs:
           python-version: "${{ env.PYTHON_VERSION }}"
 
       - name: Install Hatch
-        uses: pypa/hatch@install
-        with:
-          version: "${{ env.HATCH_VERSION }}"
-      - name: Get Hatch environment
-        id: get-hatch-env
+        id: hatch
         shell: bash
-        run: echo "env=$(hatch env find test)" >> "$GITHUB_OUTPUT"
+        run: |
+          pip install hatch==${{ env.HATCH_VERSION }}
+          echo "env=$(hatch env find test)" >> "$GITHUB_OUTPUT"
 
       - name: Run
         run: hatch run test:integration-only-fast
